Fix selection event sending for Ctrl-click in generic wxDataViewCtrl.

Ctrl-clicking on the only currently selected item in wxDataViewCtrl crashed
because we dereferenced first element of the empty m_selection array when
generating the selection change event.

Instead, send the event for the current item, this should be more consistent
with the native versions behaviour and at the very least doesn't crash.

Closes #11684.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@63382 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775